--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -13,15 +13,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "fs-extra": "^11.1.1",
-    "http-status": "^1.6.2"
+    "http-status": "^1.6.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.16.3",
+    "@types/uuid": "^9.0.1",
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22",
     "typescript": "^5.0.4"
