--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -19,6 +19,8 @@
     "express-validator": "^7.0.1",
     "fs-extra": "^11.1.1",
     "http-status": "^1.6.2",
+    "inversify": "^6.0.1",
+    "reflect-metadata": "^0.1.13",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
