--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chromatic": "lerna run --scope=@grawiki/frontend chromatic"
   },
   "devDependencies": {
-    "lerna": "^6.6.1"
+    "lerna": "^6.6.1",
+    "prettier": "^2.8.8"
   }
 }
