--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.9",
@@ -29,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
+    "chromatic": "^6.17.3",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
@@ -37,7 +39,7 @@
     "sass": "^1.58.0",
     "storybook": "^7.0.9",
     "storybook-addon-designs": "^7.0.0-beta.2",
-    "chromatic": "^6.17.3",
+    "storybook-addon-react-router-v6": "^0.3.6",
     "storybook-zeplin": "^2.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
