--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -13,9 +13,11 @@
     "chromatic": "npx chromatic --exit-once-uploaded"
   },
   "dependencies": {
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@storybook/addon-a11y": "^7.0.10",
