--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -13,9 +13,13 @@
     "chromatic": "npx chromatic --exit-once-uploaded"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "yup": "^1.1.1"
   },
