--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -28,6 +28,7 @@
     "@storybook/addon-essentials": "^7.0.10",
     "@storybook/addon-interactions": "^7.0.10",
     "@storybook/addon-links": "^7.0.10",
+    "@storybook/addon-styling": "^1.1.0",
     "@storybook/blocks": "^7.0.10",
     "@storybook/react": "^7.0.10",
     "@storybook/react-vite": "^7.0.10",
@@ -42,7 +43,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-storybook": "^0.6.12",
-    "sass": "^1.58.0",
+    "sass": "^1.63.2",
     "storybook": "^7.0.10",
     "storybook-addon-designs": "^7.0.0-beta.2",
     "storybook-addon-react-router-v6": "^1.0.1",
