--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@storybook/manager-api": "^7.0.26",
+    "@storybook/theming": "^7.0.26",
     "axios": "^1.4.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
